--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2113,14 +2113,14 @@ footer,
         .header-text {
           font-weight: 600;
           color: white;
-          font-size: 1.5rem;
+          font-size: 1.4rem;
           padding: $unit/2 0;
           margin: 0;
         }
         .header-text {
           padding: 0 0 $unit*1.5;
-          font-size: 4.5rem;
-          line-height: 4.5rem;
+          font-size: 4.4rem;
+          line-height: 4.4rem;
           letter-spacing: -0.3rem;
           font-weight: $heading-font-weight;
           .normal {
@@ -2132,7 +2132,7 @@ footer,
           }
         }
         .header-extra {
-          max-width: 55%;
+          max-width: 38%;
         }
       }
     }
@@ -2535,8 +2535,12 @@ footer.mdc-layout__footer {
   .home-banner .banner-search.overlay .content {
     .overlay-content {
       .header-text {
-        font-size: 4rem;
-        line-height: 4rem;
+        font-size: 3.1rem;
+        line-height: 3.1rem;
+        letter-spacing: -0.2rem;
+        .normal {
+          letter-spacing: -0.3rem;
+        }
       }
     }
   }
@@ -2546,14 +2550,14 @@ footer.mdc-layout__footer {
     padding-left: $unit;
   }
 }
-@media screen and (min-width: 1601px) {
+@media screen and (min-width: 1551px) {
   .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 34%, transparent 34.08%, transparent);
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 34.5%, transparent 34.58%, transparent);
   }
 }
-@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: 1600px) {
+@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: 1550px) {
   .home-banner .banner-search.overlay .content {
-    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 55%, transparent 55.08%, transparent);
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 40%, transparent 40.08%, transparent);
   }
 }
 @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
