--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1420,6 +1420,7 @@ section.search {
   h3.mdc-card__title {
     font-size: 1.1rem;
     line-height: 1.4;
+    margin-top: 0;
     margin-bottom: 0;
   }
   a.thumbnail:after {
