Refactored working pattern, improved query partials

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -897,6 +897,11 @@ a {
     h3 {
       margin-top: 0;
     }
+    .scroll-button {
+      width: $unit*4;
+      height: 80%;
+      top: 10%;
+    }
   }
 }
 .vacancy_icon {
@@ -1818,6 +1823,8 @@ body {
     padding: 0 0 $unit;
     .mdc-card__media--organisation {
       line-height: 1;
+      border-radius: 2px;
+      padding: $unit/2;
       background-color: white;
       box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
     }
@@ -3159,7 +3166,8 @@ form.inline-form {
 }
 
 .mdc-button--warning:disabled {
-  opacity: 0.8;
+  opacity: 0.5;
+  filter: grayscale(100%);
 }
 
 /*
