--- a/sites/configurations/goodmoves/partials/search-info.hbs
+++ b/sites/configurations/goodmoves/partials/search-info.hbs
@@ -12,7 +12,7 @@
   {{/compare ~}}
 </div>
 {{else}}
-{{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.salary_min @root.request.params.query.salary_max @root.request.params.query.statuses @root.request.params.query.regions @root.request.params.query.roles @root.request.params.query.sectors @root.request.params.query.home_based ~}}
+{{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.salary_min @root.request.params.query.salary_max @root.request.params.query.working_patterns @root.request.params.query.regions @root.request.params.query.roles @root.request.params.query.sectors @root.request.params.query.home_based ~}}
 <div class="search-info mdc-elevation--z1">
   No vacancies could be found, please try a different search query
 </div>
