Another IE11 bugfix

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2324,6 +2324,8 @@ footer,
       mix-blend-mode: multiply;
       max-width: 100%;
       max-height: 100%;
+      width: 100%;
+      height: auto;
       // position: absolute;
       // top: 50%;
       // left: 50%;
