--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -234,6 +234,7 @@
     {{> vacancy_actions slug=slug Id=Id action="organisation"}}
   </div>
 </div>
+{{>ga documentType="goodmoves-vacancy" documentId=Id hitType="full"}}
 <script>
   function clearNotes(evt, data) {
     console.log('clearNotes Arguments:', arguments);
