--- a/sites/configurations/goodmoves/partials/vacancy/gist.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/gist.hbs
@@ -16,3 +16,4 @@
   </div>
   {{> vacancy_actions slug=slug Id=Id}}
 </div>
+{{>ga documentType="goodmoves-vacancy" documentId=Id hitType=(default hitContext "summary")}}
