--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -9,3 +9,4 @@
   {{/compare ~}}
   {{> vacancy_actions slug=slug Id=Id}}
 </div>
+{{>ga documentType="goodmoves-vacancy" documentId=Id hitType=(default hitContext "list")}}
