--- a/sites/configurations/goodmoves/partials/vacancy/map.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/map.hbs
@@ -25,3 +25,4 @@
     <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
   </div>
 </div>
+{{>ga documentType="goodmoves-vacancy" documentId=Id hitType="map"}}
