--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -9,3 +9,4 @@
   {{/compare ~}}
   {{> vacancy_actions slug=slug Id=Id home_based=home_based distance=distance}}
 </div>
+{{>ga documentType="goodmoves-vacancy" documentId=Id hitType=(default hitContext "search-result")}}
