--- a/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -17,7 +17,7 @@
       <div class="mdc-layout-grid__inner">
         {{#each @root.data.supplimentaryResponses.related.hits.hits ~}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          {{> vacancy_list _source}}
+          {{> vacancy_list _source hitContext="related-job"}}
         </div>
         {{/each ~}}
       </div>
