Added optional parent document dimension to ga partial

--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -52,7 +52,8 @@ gtag('config', 'UA-3467930-6', {
   'anonymize_ip': true,
   'cookieDomain': 'none',
   'custom_map': {
-    'dimension1': 'hit_type'
+    'dimension1': 'hit_type',
+    'dimension2': 'parent_document'
   }
 });
 
