--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -250,11 +250,13 @@
           <span class="fal fa-fw fa-angle-right scroll-icon"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
-          {{#each @root.data.primaryResponse.recently_viewed.hits.hits ~}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
-            {{> vacancy_mini _source}}
-          </div>
-          {{/each ~}}
+          {{#with (sortByIndex @root.data.primaryResponse.recently_viewed.hits.hits (split @root.request.cookies.recently_viewed ',') '_id')}}
+            {{#each this ~}}
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
+              {{> vacancy_mini _source}}
+            </div>
+            {{/each ~}}
+          {{/with}}
         </div>
       </div>
     </div>
