--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-head-tags.hbs
@@ -11,7 +11,7 @@
 <meta property="og:image:height" content="250">
 <meta property="og:image:width" content="250">
 <meta itemprop="image" content="{{default organisation.logo_url og_image ../og_image}}" data-dynamic="true">
-<meta name="twitter:card" content="{{default organisation.logo_url og_image ../og_image}}" data-dynamic="true">
+<meta name="twitter:image" content="{{default organisation.logo_url og_image ../og_image}}" data-dynamic="true">
 {{/ifAny ~}}
 
 {{#ifAny og_summary description ../og_summary ../description ~}}
@@ -23,6 +23,7 @@
 {{/ifAny ~}}
 
 <!-- Twitter Card data -->
+<meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@goodmovesjobs">
 <meta name="twitter:creator" content="@goodmovesjobs">
 <!-- Twitter summary card with large image must be at least 280x150px -->
