--- a/sites/configurations/goodmoves/partials/ga.hbs
+++ b/sites/configurations/goodmoves/partials/ga.hbs
@@ -2,7 +2,7 @@
   gtag('event', 'document_hit', {
     'event_category': {{{stringify documentType}}},
     'event_label': {{{stringify documentId}}},
-    'hit_type': {{{stringify (default hitType 'other')}}},
-    {{#if parentDocument}}'parent_document': {{{stringify parentDocument}}}{{/if}}
+    'hit_type': {{{stringify (default hitType 'other')}}}{{#if parentDocument ~}},
+    'parent_document': {{{stringify parentDocument}}}{{/if ~}}
   });
 </script>
