Bugfix in ga partial include

--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -223,7 +223,11 @@
     {{> vacancy_actions slug=slug Id=Id action="organisation"}}
   </div>
 </div>
-{{>ga documentType="goodmoves-vacancy" documentId=Id hitType=(if @root.request.params.query.email "full-from-email" "full")}}
+{{#if @root.request.params.query.email ~}}
+  {{> ga documentType="goodmoves-vacancy" documentId=Id hitType="full-from-email"}}
+{{else}}
+  {{> ga documentType="goodmoves-vacancy" documentId=Id hitType="full"}}
+{{/if ~}}
 <script>
   function clearNotes(evt, data) {
     console.log('clearNotes Arguments:', arguments);
