--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1798,14 +1798,14 @@ body {
   flex: 1 0 auto;
   .mdc-card__media--organisation {
     float: right;
-    margin: $unit $unit $unit/2 $unit/2;
+    margin: $unit $unit/2 $unit/2;
   }
 }
 @media screen and (max-width: 1280px) {
   .mdc-card.search-result .mdc-card__info--organisation-row .mdc-card__media--organisation {
     float: none;
     display: block;
-    margin: $unit $unit $unit/2;
+    margin: $unit $unit/2 $unit/2;
     img {
       display: block;
       margin: 0 auto;
@@ -1821,7 +1821,7 @@ body {
   }
   .mdc-card {
     .mdc-card__media--organisation {
-      margin-top: 0;
+      margin-top: -($unit/2);
     }
   }
 }
