Minor mobile styling

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2859,6 +2859,12 @@ footer.mdc-layout__footer {
       margin: 0 $unit 0 $unit/5;
     }
   }
+  .currently-recruiting .organisation-logo {
+    padding: 0 $unit/2 $unit;
+  }
+  .home .tfn-latest {
+    padding: 0 $unit/2 !important
+  }
   .mdc-card.full,
   .mdc-card.search-result {
     .mdc-card__info--vacancy {
