--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2223,7 +2223,7 @@ footer,
 .home-heading {
   padding: 0 $unit*1.5;
   .mdc-typography--headline5 {
-    margin: $unit*1.5 0 $unit;
+    margin: $unit*1.5 0 $unit/2;
   }
 }
 .home-content {
@@ -2362,7 +2362,7 @@ footer,
   -webkit-justify-content: space-between;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  padding: $unit*1.5 0 $unit;
+  padding: $unit*(3/4) 0 $unit;
   margin: 0 0 $unit/2;
   .mdc-layout-grid__cell.shortlist-jobs,
   .mdc-layout-grid__cell.latest-jobs,
@@ -2826,7 +2826,7 @@ footer.mdc-layout__footer {
   .home-heading {
     padding: 0 $unit/2;
     .mdc-typography--headline5 {
-      margin: $unit/2 0 $unit;
+      margin: $unit/2 0 $unit/2;
     }
   }
   .home-browse .mdc-drawer__content-heading,
