--- a/sites/configurations/fundingscotland/partials/search-info.hbs
+++ b/sites/configurations/fundingscotland/partials/search-info.hbs
@@ -1,12 +1,14 @@
 {{#if paging.totalResults ~}}
 <div class="search-info mdc-elevation--z3">
-  <strong>Total results:</strong> {{addCommas paging.totalResults}} |
+  <strong>Total results:</strong> {{addCommas paging.totalResults}}
+  {{#compare paging.totalResults ">" 10 ~}} |
   <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
+  {{/compare ~}}
 </div>
 {{else}}
 {{#ifAny @root.request.params.query.keywords @root.request.params.query.activities @root.request.params.query.beneficiaries @root.request.params.query.geographical_areas_funded @root.request.params.query.fund_status @root.request.params.query.charities_only @root.request.params.query.type_of_cost @root.request.params.query.type_of_funding ~}}
 <div class="search-info mdc-elevation--z1">
-  No results, please try a different search query
+  No results could be found, please try a different search query
 </div>
 {{/ifAny ~}}
 {{/if ~}}
