--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2233,6 +2233,9 @@ footer,
   background-color: $mdc-theme-secondary-light;
   padding: 0 $unit 0 !important;
   position: relative;
+  .mdc-layout-grid {
+    display: inline-block;
+  }
 }
 .home {
   .currently-recruiting {
