More changes to home page

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2235,6 +2235,8 @@ footer,
   position: relative;
   .mdc-layout-grid {
     display: inline-block;
+    max-width: 100%;
+    width: auto;
   }
 }
 .home {
