Home styling fixes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2223,7 +2223,7 @@ footer,
 .home-heading {
   padding: 0 $unit*1.5;
   .mdc-typography--headline5 {
-    margin: $unit*1.5 0 $unit/2;
+    margin: $unit 0 $unit/2;
   }
 }
 .home-content {
@@ -2231,7 +2231,8 @@ footer,
 }
 .home-jobs {
   background-color: $mdc-theme-secondary-light;
-  padding: 0 $unit 0 !important;
+  padding: 0 $unit/2 0 !important;
+  margin-bottom: $unit;
   position: relative;
   .mdc-layout-grid {
     display: inline-block;
@@ -2368,7 +2369,7 @@ footer,
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   padding: $unit*(3/4) 0 $unit;
-  margin: 0 0 $unit/2;
+  margin: 0;
   .mdc-layout-grid__cell.shortlist-jobs,
   .mdc-layout-grid__cell.latest-jobs,
   .mdc-layout-grid__cell.top-jobs {
@@ -2440,7 +2441,7 @@ footer,
   display: flex;
 }
 .scroll-button.scroll-left {
-  left: $unit;
+  left: $unit/2;
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.1) 50%, $mdc-theme-secondary-light 50.01%, $mdc-theme-secondary-light);
 }
 .fa-angle-left:before {
@@ -2449,7 +2450,7 @@ footer,
   text-align: left;
 }
 .scroll-button.scroll-right {
-  right: $unit;
+  right: $unit/2;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.1) 50%, $mdc-theme-secondary-light 50.01%, $mdc-theme-secondary-light);
 }
 .fa-angle-right:before {
@@ -2831,7 +2832,7 @@ footer.mdc-layout__footer {
   .home-heading {
     padding: 0 $unit/2;
     .mdc-typography--headline5 {
-      margin: $unit/2 0 $unit/2;
+      margin: $unit/2 0 $unit/3;
     }
   }
   .home-browse .mdc-drawer__content-heading,
