Initial setup of 2019 Gathering content

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -759,6 +759,7 @@ primary-dark: #263238
   @include theme-colours('funding-scotland');
 }
 .events.a1vb0000007fc04aaa-the-gathering,
+.the-gathering-2019,
 .the-gathering {
   @include theme-colours('gathering');
 }
