--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -234,9 +234,9 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <div class="mdc-typography--headline5">
             Recently viewed&ensp;
-            <!-- <span class="mdc-typography--body1">
-              <a href="/search?sort=newest&page=2">Find more</a>
-            </span> -->
+            <span class="mdc-typography--body1">
+              <a href="/search?sort=newest&page=1">Find more</a>
+            </span>
           </div>
         </div>
       </div>
