--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2224,6 +2224,7 @@ form#settled_status {
   }
 }
 body.scottish-charity-awards:not(.post),
+body.the-gathering-2019:not(.post),
 body.the-gathering:not(.post) {
   .container-fluid,
   .page-content {
@@ -2388,6 +2389,7 @@ body.scottish-charity-awards:not(.post) {
 .projects-campaigns.terrific-trustees.search .page-info,
 .post-sidebar .page-info,
 .page-sidebar .page-info,
+body.the-gathering-2019 .page-info,
 body.the-gathering .page-info,
 body.i-love-charity .page-info,
 .grant-content .page-info,
