--- a/sites/configurations/scvo/templates/pages/page-gathering-2019-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-gathering-2019-home.hbs
@@ -2,11 +2,19 @@
   {{> header_splash_gathering}}
   <div class="container-fluid">
     {{> breadcrumbs}}
-    
-    GATHERING NAVIGATION
 
-    {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
+    <div class="upper-nav page-upper-nav">
+      {{> menu_gathering}}
+    </div>
 
-    SPONSOR LOGOS HERE
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+          {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+{{> footer_gathering}}
