--- a/sites/configurations/scvo/templates/pages/page-gathering-2019.hbs
+++ b/sites/configurations/scvo/templates/pages/page-gathering-2019.hbs
@@ -2,16 +2,22 @@
   {{> header_splash_gathering}}
   <div class="container-fluid">
     {{> breadcrumbs}}
+
+    <div class="upper-nav page-upper-nav">
+      {{> menu_gathering}}
+    </div>
+
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
           {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-          {{> menu_gathering}}
+          Navigation menu TBC
         </div>
       </div>
     </div>
-    SPONSOR LOGOS HERE
   </div>
 </div>
+
+{{> footer_gathering}}
