--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2472,7 +2472,7 @@ footer.mdc-layout__footer {
   background-color: $mdc-theme-footer;
   box-shadow: $toolbar-shadow-reverse;
   position: relative;
-  z-index: 4;
+  // z-index: 4;
   p, li, div {
     font-family: $footer-font-family;
     font-weight: $footer-font-weight;
@@ -2681,8 +2681,8 @@ footer.mdc-layout__footer {
     line-height: 1.6rem;
   }
   .mdc-typography--headline5 {
-    font-size: 1.4rem;
-    line-height: 1.5rem;
+    font-size: 1.3rem;
+    line-height: 1.4rem;
   }
   .mdc-card.full .mdc-card--full-content h4,
   .mdc-typography--headline6 {
@@ -2956,6 +2956,11 @@ footer.mdc-layout__footer {
     }
   }
   footer.mdc-layout__footer {
+    .footer-main,
+    .footer-copyright {
+      padding-left: $unit/2;
+      padding-right: $unit/2;
+    }
     h3 {
       font-size: $unit;
       padding: $unit/4 0;
@@ -2996,6 +3001,7 @@ footer.mdc-layout__footer {
     }
     .brand-logo {
       text-align: center;
+      margin-top: $unit;
     }
   }
 }
@@ -3007,6 +3013,7 @@ footer.mdc-layout__footer {
     height: 64px;
     width: 64px;
   }
+  .mdc-card.full .mdc-card__info--vacancy-row .mdc-card__media,
   .mdc-card .mdc-card__info--vacancy-row .mdc-card__media,
   .mdc-card .mdc-card__info--organisation-row .mdc-card__media {
     display: block;
