--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -205,7 +205,7 @@
                   Delete notes
                 </button>
                 <div class="mdc-typography--caption">
-                  Any notes you write here are private on your account and are not shared with {{organisation.name}}
+                  Any notes you write here are private on your account and are not shared with {{organisation.name}}. Read our <a href="/privacy" target="_blank">privacy notice</a>.
                 </div>
               </div>
             </form>
